<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounde"
    tools:context=".SignupActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="63dp">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:src="@drawable/es"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edittext_background"
        android:hint="Firtsname"
        android:textColorHint="#FBFBFC"
        android:textColor="#FFFCFD"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />
    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:textColorHint="#FBFBFC"
        android:background="@drawable/edittext_background"
        android:hint="Lastname"
        android:textColor="#FCF8F9"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:textColorHint="#FBFBFC"
        android:background="@drawable/edittext_background"
        android:hint="Address"
        android:textColor="#FDF6F8"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:textColorHint="#FBFBFC"
        android:background="@drawable/edittext_background"
        android:hint="E-mail"
        android:textColor="#FCF8F9"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:textColorHint="#FBFBFC"
        android:background="@drawable/edittext_background"
        android:hint="Phoneno"
        android:textColor="#ec407a"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:textColorHint="#FBFBFC"
        android:background="@drawable/edittext_background"
        android:hint="Username"
        android:textColor="#F8F5F6"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittext_background"
        android:hint="Password"
        android:textColorHint="#FBFBFC"
        android:textColor="#F7F5F5"
        android:inputType="textPassword"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:textColorHint="#FBFBFC"
        android:background="@drawable/edittext_background"
        android:hint="Confirm Password"
        android:textColor="#FAF7F8"
        android:inputType="textPassword"
        android:fontFamily="serif"
        android:paddingLeft="18dp"
        />
    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/round_btn"
        android:text="Sign up"
        android:fontFamily="serif"
        android:textColor="#1F3092"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal">
    <TextView
            android:id="@+id/txtaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="Already have an account?"
            android:textColor="#FBFBFC"
            android:textSize="14dp"
            android:layout_marginLeft="30dp" />


        <TextView
            android:id="@+id/txtlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Login"
            android:textColor="#FBFBFC"
            android:textSize="18sp" />
    </LinearLayout>











</LinearLayout>


</ScrollView>





